<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_SystemVariable" Id="{465f00b0-f7bb-09b1-309f-79d544e20801}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fbTime							: FB_BaseTime;
	fbLocation						: FB_BaseLocation;
	fbLogger						: FB_BaseLogger;
	stCommonData					: ST_BaseCommonData;
	
	(*	Element FB_MachineControl - sterowanie stanami i trybami pracy	*)
	fbSaMController					: FB_SaMController;
	
	(*	Główny element sterujący maszyną - logika pracy					*)
	fbMachineControl				: FB_MCMachineControl;
	
	(*	Zmienne zakończenia konfiguracji	*)
	bDefaultInitDone				: BOOL;
	bMachineInitDone				: BOOL;
	bControlHMIInit					: BOOL;
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>