<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="PRG_SystemControlMachineInit" Id="{6b815878-88af-4b04-8bbb-26a2f8ec4db7}" SpecialFunc="None">
    <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		25.10.2025		TC 4024.66
	Podpiecie zmiennych głównych do podzespołów 
*)
PROGRAM PRG_SystemControlMachineInit
VAR
	(*	Konfiguracja MachineControl	*)
	fbDefaultMachineConfiguration	: FB_MachineDefaultConfiguration;
	fbMachineConfigure				: FB_MCMachineConfigure;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (NOT GVL_SystemVariable.bDefaultInitDone AND 
	NOT GVL_SystemVariable.bMachineInitDone) THEN

	GVL_SystemVariable.stCommonData.itfTime := GVL_SystemVariable.fbTime;
	GVL_SystemVariable.stCommonData.itfLocaciotn := GVL_SystemVariable.fbLocation;
	GVL_SystemVariable.stCommonData.itfLogger := GVL_SystemVariable.fbLogger;

		(*	Podpięcie podstawowej konfiguracji	*)
	fbMachineConfigure.AddConfiguration (fbConfigure := fbDefaultMachineConfiguration);
	GVL_SystemVariable.fbMachineControl.AddModulConfigure (fbMachineConfigure := fbMachineConfigure);
		(*	Podpięcie danych do leogera 	*)
	GVL_SystemVariable.fbLogger.LinkCommonData (stCommonData := GVL_SystemVariable.stCommonData);
		(*	Podpięcie danych do receptur	*)
	GVL_SystemVariable.fbRecipe.LinkCommonData (stCommonData := GVL_SystemVariable.stCommonData);
		(* Pobranie ilosci szablonów jak nei ma żadnego szablonu to tworzymy *)
	

(*	
	(*	Linkowanie zmiennych z modułami	*)
	GVL_SystemVariable.fbLogger.LinkCommonData (stCommonData := GVL_SystemVariable.stCommonData);
	GVL_SystemVariable.fbMachineControl.LinkCommonData (stCommonData := GVL_SystemVariable.stCommonData);
	(*	Podpięcie zmiennych Safety		*)
	GVL_SystemVariable.fbMachineControl.LinkSS1 (fbSS1 := GVL_MCSafety.flSS1);
	GVL_SystemVariable.fbMachineControl.LinkSTO (fbSTO := GVL_MCSafety.flSTO);
	(*	Podpięcie zarządzania stanami i trybami pracy	*)
	GVL_SystemVariable.fbMachineControl.AddModulSaM (fbSaMController := GVL_SystemVariable.fbSaMController);
	
	GVL_SystemVariable.fbHMIManager.LinkCommonData (stCommonData := GVL_SystemVariable.stCommonData);
	(*	Podpięcie zmiennych Safety		*)
	GVL_SystemVariable.fbHMIManager.LinkSS1 (fbSS1 := GVL_MCSafety.flSS1);
	GVL_SystemVariable.fbHMIManager.LinkSTO (fbSTO := GVL_MCSafety.flSTO);
	
	
*)	
	GVL_SystemVariable.bDefaultInitDone	:= TRUE;
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>