<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_MachineDefaultConfiguration" Id="{b648aa86-a7e1-098c-12e9-4759598ffa68}" SpecialFunc="None">
    <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		10.11.2025		TC 4024.66
	Główny blok konfiguracyjny MachineControl
*)
FUNCTION_BLOCK FB_MachineDefaultConfiguration EXTENDS FB_Base IMPLEMENTS ITF_MCConfiguration
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="AddCreateTemplate" Id="{0b84ceee-f8e6-04f3-07fe-d40cf7530841}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		26.11.2025		TC 4024.66
	Dodawanie szablonu receptury
*)
METHOD AddCreateTemplate : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//itfMachineControl.AddCreateTemplateFromConfiguration (fbCreateTemplate := );
]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddElements" Id="{d32e32b9-a89e-0a44-15ad-90b7784453b1}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Metoda przeznaczona do dodawania elementów do FB_MachineControl
*)
METHOD AddElements : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddHMIManager" Id="{a5991951-f512-024a-2e07-3e925ccdfffa}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Podpięcie menadżera HMI
*)
METHOD AddHMIManager : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.AddHMIManagerFromConfiguration (fbHMIManager := PRG_ControlHMI.fbHMIManager);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddMachineCotrolToYourSelf" Id="{64c7fe67-f36e-0232-10b9-fb13acc8e5c0}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Dodanie samego siebie do systemu controli maszyny
*)
METHOD AddMachineCotrolToYourSelf : BOOL
VAR_INPUT
	itfMachineControl			: ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.AddMachineCotrolToYourSelfFromConfiguration ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddModulRecipe" Id="{9d1d6f13-7035-01e6-1137-6bcbba350375}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		26.11.2025		TC 4024.66
	Dodanie obsługi receptur
*)
METHOD AddModulRecipe : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.AddModulRecipeFromConfiguration (itfRecipe := GVL_SystemVariable.fbRecipe);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddSaMCotrollerToMachineControl" Id="{c7264e79-e037-009f-20e3-77b9947fed95}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Dodanie modułu sterowania stanami i trybami do machinecontrol
*)
METHOD PUBLIC AddSaMCotrollerToMachineControl : BOOL
VAR_INPUT
	itfMachineControl			: ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.AddSaMCotrollerToMachineControlFromConfiguration (itfSaMController := GVL_SystemVariable.fbSaMController);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddSaMToTopElement" Id="{43e3942e-ed1d-0047-15f1-93194cae35f7}">
      <Declaration><![CDATA[METHOD AddSaMToTopElement
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.AddSaMToTopElementFromConfiguration (itfSaMController := GVL_SystemVariable.fbSaMController);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkCommonDataToAddedElements" Id="{23886805-2788-0bdd-1a2b-d773e51344bc}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Zlinkowanie danych wspólnych do dodanych elementów
*)
METHOD LinkCommonDataToAddedElements : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.LinkCommonDataToAddedElementsFromConfiguration (stCommonData := GVL_SystemVariable.stCommonData);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkMassangerToaddedTopElements" Id="{3d1ec45d-85a7-0f26-2afb-97fceead6326}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Dodanie głównego komunikatora pomiędzy topelementami do topelementów
*)
METHOD LinkMassangerToaddedTopElements : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.LinkMassangerToaddedTopElementsFromConfiguration (
	fbCommunicator := GVL_SystemVariable.fbMachineControl.GetCommunicatorITF ()
);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkRequestButtonChange" Id="{b10a4914-2063-0cae-2590-d6e52909f8a4}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		14.11.2025		TC 4024.66
	Podpięcie przyciskow zmiany trybu i stanu
*)
METHOD LinkRequestButtonChange : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Clear,		itfRequest := GVL_RequeestChange.fbprClear);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Reset, 	itfRequest := GVL_RequeestChange.fbprReset);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Start, 	itfRequest := GVL_RequeestChange.fbprStart);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Stop, 		itfRequest := GVL_RequeestChange.fbprStop);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Suspend, 	itfRequest := GVL_RequeestChange.fbprSuspend);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Unsuspend, itfRequest := GVL_RequeestChange.fbprUnsuspend);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Hold, 		itfRequest := GVL_RequeestChange.fbprHold);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Unhold, 	itfRequest := GVL_RequeestChange.fbprUnhold);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Complete, 	itfRequest := GVL_RequeestChange.fbprComplete);
itfMachineControl.LinkRequestButtonStateChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeState.Abort,		itfRequest := GVL_RequeestChange.fbprAbort);

itfMachineControl.LinkRequestButtonModeChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeMode.Production, 	itfRequest := GVL_RequeestChange.fbprProduction);
itfMachineControl.LinkRequestButtonModeChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeMode.Maintenance,	itfRequest := GVL_RequeestChange.fbprMaintenance);
itfMachineControl.LinkRequestButtonModeChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeMode.Manual, 		itfRequest := GVL_RequeestChange.fbprManual);
itfMachineControl.LinkRequestButtonModeChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeMode.Washing,		itfRequest := GVL_RequeestChange.fbprWashing);
itfMachineControl.LinkRequestButtonModeChangeFromConfiguration (iNumberOfRequest := E_SaMCommandChangeMode.Diagnostisc,	itfRequest := GVL_RequeestChange.fbprDiagnostics);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkSafetyToaddedElements" Id="{3acce192-adb0-05aa-0805-6253a900664e}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Podłączenie wsyzstkich zmiennych pochodzących od Programu safety 
*)
METHOD LinkSafetyToaddedElements : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.LinkSafetyToaddedElementsFromConfiguration (
	flSS1 := GVL_MCSafety.flSS1,
	flSTO := GVL_MCSafety.flSTO
);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetCodeToAddedElements" Id="{1b39a1ed-5064-01d7-257d-8cea5be2e882}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Nadanie unikalnych kodów elementom w systemie
*)
METHOD SetCodeToAddedElements : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.SetCodeToAddedElementsFromConfiguration ();]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetEnableHMIService" Id="{3a888c24-bc79-05e2-02e1-aafc3f4b0d67}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Uruchomienie lub wyłączenie obsługi HMI jak jest false fb obsługi nie jest dodawane do MachineControl
*)
METHOD SetEnableHMIService : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.SetEnableHMIServiceFromConfiguration (bValue := TRUE);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetIDEventsToAddedElements" Id="{6a6fd1b7-5a67-00a6-02bb-61313e511b34}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Nadaje unikalne ID zgłoszeniom dodanym do elementów w sesyemie
*)
METHOD SetIDEventsToAddedElements : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.SetIDEventsToAddedElementsFromConfiguration ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetIDToAddedElements" Id="{132b0a5e-1bb2-05e5-2376-46651725d966}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		13.11.2025		TC 4024.66
	Dodanie wszystkim elementom w systemie unikalnego ID
*)
METHOD SetIDToAddedElements : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.SetIDToAddedElementsFromConfiguration ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetStartMode" Id="{cccc5924-88f9-0ded-0130-1c253693e113}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		14.11.2025		TC 4024.66
	ustawienie trybu poczatkowego
*)
METHOD SetStartMode : BOOL
VAR_INPUT
	itfMachineControl	: B_MachineControl.ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[itfMachineControl.SetStartModeFromConfiguration (eStartMode := E_BaseMachineMode.Production);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="STARE_AddHMIToMachineControl" Id="{1ddb6eb9-c931-0e11-33e1-e42c75396327}">
      <Declaration><![CDATA[METHOD PUBLIC STARE_AddHMIToMachineControl : BOOL
VAR_INPUT
	itfMachineControl			: ITF_MCMachineControlConfigure;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[//itfMachineControl.AddHMIManager (itfHMIManager := GVL_SystemVariable.fbHMIManager);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="STARE_AddTopElementToLogger" Id="{332b5b16-6a8b-4f9c-b147-743d36983c25}">
      <Declaration><![CDATA[METHOD PUBLIC STARE_AddTopElementToLogger : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//GVL_SystemVariable.fbMachineControl.JoinTheLogger ();

]]></ST>
      </Implementation>
    </Method>
    <Method Name="STARE_AddTopElementToMachineControl" Id="{58e1fa28-d374-49d5-b4f2-6555dd78af83}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		29.10.2025		TC 4024.66
	Dodawanie TopElementu do systemu
*)
METHOD PUBLIC STARE_AddTopElementToMachineControl : BOOL
VAR_INPUT
	itfMachineControl			: ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//THIS^.SetText (eLocation := E_BaseLocation.pl, wsDescription := "System");
//THIS^.SetText (eLocation := E_BaseLocation.en, wsDescription := "System");
//THIS^.SetText (eLocation := E_BaseLocation.de, wsDescription := "System");
//GVL_SystemVariable.fbMachineControl.SetName (stName := THIS^.GetTexts ());
//itfMachineControl.AddTopElementFromConfiguration (fbTopElement	:= GVL_SystemVariable.fbMachineControl);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="STARE_StateAndModes" Id="{017f3a1b-6dcb-4e00-82fc-a658d05da483}">
      <Declaration><![CDATA[METHOD STARE_StateAndModes : BOOL
VAR_INPUT
	itfMachineControl			: ITF_MCMachineControlConfigure;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Clear,		itfRequest := GVL_RequeestChange.fbprClear);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Reset, 	itfRequest := GVL_RequeestChange.fbprReset);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Start, 	itfRequest := GVL_RequeestChange.fbprStart);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Stop, 		itfRequest := GVL_RequeestChange.fbprStop);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Suspend, 	itfRequest := GVL_RequeestChange.fbprSuspend);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Unsuspend, itfRequest := GVL_RequeestChange.fbprUnsuspend);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Hold, 		itfRequest := GVL_RequeestChange.fbprHold);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Unhold, 	itfRequest := GVL_RequeestChange.fbprUnhold);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Complete, 	itfRequest := GVL_RequeestChange.fbprComplete);
//itfMachineControl.AddRequestStateChange (iNumberOfRequest := E_SaMCommandChangeState.Abort,		itfRequest := GVL_RequeestChange.fbprAbort);
//
//itfMachineControl.AddRequestModeChange (iNumberOfRequest := E_SaMCommandChangeMode.Production, 	itfRequest := GVL_RequeestChange.fbprProduction);
//itfMachineControl.AddRequestModeChange (iNumberOfRequest := E_SaMCommandChangeMode.Maintenance,	itfRequest := GVL_RequeestChange.fbprMaintenance);
//itfMachineControl.AddRequestModeChange (iNumberOfRequest := E_SaMCommandChangeMode.Manual, 		itfRequest := GVL_RequeestChange.fbprManual);
//itfMachineControl.AddRequestModeChange (iNumberOfRequest := E_SaMCommandChangeMode.Washing,		itfRequest := GVL_RequeestChange.fbprWashing);
//itfMachineControl.AddRequestModeChange (iNumberOfRequest := E_SaMCommandChangeMode.Diagnostisc,	itfRequest := GVL_RequeestChange.fbprDiagnostics);









]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>