<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="PRG_ControlHMI" Id="{2dfd529a-8da9-0bb7-1a99-ad15ed92c2b8}" SpecialFunc="None">
    <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		10.11.2025		TC 4024.66
	Program sterowanie HMI
*)
PROGRAM PRG_ControlHMI
VAR
	(*	Domyślna struktura danych dla HMI	*)
	stHMIData					: ST_HMIManager;
	(*	Główny element sterowania wyświetlaniem na HMI					*)
	fbHMIManager				: FB_HMIManager;
	(*	Domyślne przyciski menu głównego - Logika i łaczniki do HMI	*)
	stMainMenuButton			: ST_MainMenuButton;
	(*	Menu główne - Logika 	*)
	fbMainMenu					: FB_HMIEMenu;
	(*	Menu główne - Łącznik	*)
	fbMainMenu_HMI_Connector	: FB_HMIEMenu_HMI (itfBaseLoggerConnector := GVL_SystemVariable.fbLogger, itfMenu := fbMainMenu);
	(*	Łącznik do Machine Control	*)
	fbMachineControl_HMI_Connector		: FB_MCHMIMachineControl_HMI (itfBaseLoggerConnector := GVL_SystemVariable.fbLogger, itfMachineControlConnector := GVL_SystemVariable.fbMachineControl);
	(*	Moduły przygotowyania danych dla stron	*)
	stPrepareDataModules		: ST_PrepareDataModules;
	(*	Łącznik do receptur		*)
	fbRecipeModul_HMI_Connector	: FB_BaseRecipe_HMI (fbBaseRecipe := GVL_SystemVariable.fbRecipe);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
	(*	Wywołanie metody sterowania HMI	*)

IF (GVL_Systemvariable.bDefaultInitDone AND
	GVL_Systemvariable.bMachineInitDone AND
	GVL_SystemVariable.bControlHMIInit AND
	GVL_SystemVariable.fbMachineControl.IsInitDone ()) THEN
	
	fbHMIManager ();
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>